crates/zenith/tests/snapshots/screens__history__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·     ? keys
 6 calls · 0 dropped · kept 10 000 calls or 32 MiB
   #     sent, UTC     method             outcome           round trip  in SOLAR
   1     15:47:00.000  solar.version      ok                   1.21 ms   0.17 ms
   2     15:47:00.000  solar.manifest     ok                   1.84 ms   0.17 ms
   3     15:47:03.001  solar.ping         ok                   0.52 ms   0.17 ms
   4     15:47:03.002  system.info        ok                   0.61 ms   0.17 ms
 › 5     15:47:03.002  solar.describe     error NOT_FOUND      0.31 ms   0.05 ms
   6     15:47:03.003  solar.version      waiting










 ──────────────────────────────────────────────────────────────────────────────
 request   {"jsonrpc":"2.0","id":5,"method":"solar.describe","params":{"api":"…
 response  {"jsonrpc":"2.0","id":5,"error":{"code":-32601,"message":"No API is…
 Enter view   r send again   e edit   x export
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.31 ms ─── in orbit 3s ────────────
--- every cell not listed is #17161C on #F5F1E8
 0:  0-7   #8C4907 on #F5F1E8 bold
 0: 10-18  #555355 on #F5F1E8
 0: 21-26  #555355 on #F5F1E8
 0: 29-33  #555355 on #F5F1E8
 0: 36-44  #8C4907 on #F5F1E8 bold underlined
 0: 45-72  #868482 on #F5F1E8
 0: 73-73  #8C4907 on #F5F1E8 bold
 0: 74-79  #555355 on #F5F1E8
 1:  0-49  #555355 on #F5F1E8
 2:  0-79  #555355 on #F5F1E8
 3:  0-2   #8C4907 on #F5F1E8
 3:  3-6   #555355 on #F5F1E8
 3:  9-20  #555355 on #F5F1E8
 3: 23-39  #8C4907 on #F5F1E8
 3: 72-79  #555355 on #F5F1E8
 4:  0-2   #8C4907 on #F5F1E8
 4:  3-6   #555355 on #F5F1E8
 4:  9-20  #555355 on #F5F1E8
 4: 23-39  #8C4907 on #F5F1E8
 4: 72-79  #555355 on #F5F1E8
 5:  0-2   #8C4907 on #F5F1E8
 5:  3-6   #555355 on #F5F1E8
 5:  9-20  #555355 on #F5F1E8
 5: 23-39  #8C4907 on #F5F1E8
 5: 72-79  #555355 on #F5F1E8
 6:  0-2   #8C4907 on #F5F1E8
 6:  3-6   #555355 on #F5F1E8
 6:  9-20  #555355 on #F5F1E8
 6: 23-39  #8C4907 on #F5F1E8
 6: 72-79  #555355 on #F5F1E8
 7:  0-2   #8C4907 on #F5F1E8
 7:  3-6   #555355 on #F5F1E8
 7:  7-8   #17161C on #DAD7D0
 7:  9-20  #555355 on #F5F1E8
 7: 21-22  #17161C on #DAD7D0
 7: 23-39  #8C4907 on #F5F1E8
 7: 40-41  #17161C on #DAD7D0
 7: 42-57  #8C4907 on #F5F1E8 bold
 7: 58-59  #17161C on #DAD7D0
 7: 70-71  #17161C on #DAD7D0
 7: 72-79  #555355 on #F5F1E8
 8:  0-2   #8C4907 on #F5F1E8
 8:  3-6   #555355 on #F5F1E8
 8:  9-20  #555355 on #F5F1E8
 8: 23-39  #8C4907 on #F5F1E8
 8: 42-57  #555355 on #F5F1E8
 8: 72-79  #555355 on #F5F1E8
19:  0-78  #868482 on #F5F1E8
20:  0-10  #555355 on #F5F1E8
21:  0-10  #555355 on #F5F1E8
22:  1-5   #8C4907 on #F5F1E8 bold
22:  6-13  #555355 on #F5F1E8
22: 14-14  #8C4907 on #F5F1E8 bold
22: 15-28  #555355 on #F5F1E8
22: 29-29  #8C4907 on #F5F1E8 bold
22: 30-37  #555355 on #F5F1E8
22: 38-38  #8C4907 on #F5F1E8 bold
22: 39-48  #555355 on #F5F1E8
23:  0-2   #868482 on #F5F1E8
23:  3-3   #8C4907 on #F5F1E8
23:  4-6   #868482 on #F5F1E8
23:  7-17  #8C4907 on #F5F1E8 bold
23: 18-20  #555355 on #F5F1E8
23: 28-32  #868482 on #F5F1E8
23: 33-42  #555355 on #F5F1E8
23: 50-54  #868482 on #F5F1E8
23: 55-63  #555355 on #F5F1E8
23: 66-79  #868482 on #F5F1E8
